Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23203

When setting a padding or margin for QHeaderView section with elide mode set to Qt::ElideRight the beginning of the header string is not shown

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.12.0 Alpha
    • 4.7.4, 5.3.1
    • Widgets: Itemviews
    • None
    • fbd21e1024d503b4b8b5e38b629a3b17392dbb05

    Description

      It seems that the padding or margin is not taken into account when counting the section rect if there is elide mode set. The attached example reproduces the issue.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chehrlic Christian Ehrlicher
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes